# remote-voice-typer

./: .env.example  .gitignore  README.md  WINDOWS_POWERSHELL_SETUP.md  agent.py  index.html  pyproject.toml  server.py  start_voice_input.bat  start_voice_input.ps1
